# rsgbds

./: Cargo.toml  README.md  build.rs
.config/: nextest.toml
maintainer/: gdb_pretty_printers.py
src/: object.rs  rpn.rs
src/asm/: ARCHITECTURE.md  charmap.rs  cli.rs  cond.rs  context_stack.rs  diagnostics.rs  expr.rs  format.rs  instructions.rs  macro_args.rs  main.rs  obj_file.rs  section.rs  source_store.rs  sources.rs  symbols.rs
src/asm/section/: data.rs  mod.rs  union.rs
src/asm/syntax/: CONTRIBUTING.md  lexer.rs  mod.rs  parser.lalrpop  tokens.rs
src/asm/warnings/: align-ofs.mdoc  backwards-for.mdoc  builtin-args.mdoc  charmap-redef.mdoc  empty-data-directive.mdoc  empty-macro-arg.mdoc  empty-strrpl.mdoc  export-undefined.mdoc  large-constant.mdoc  macro-shift.mdoc  mutating-referenced.mdoc  purge.mdoc  unescaped-brace.mdoc  unmatched-directive.mdoc  unterminated-load.mdoc  unused-func-param.mdoc
src/common/: dash_stdio.rs  diagnostics.rs  mod.rs  section.rs
src/gfx/: cli.rs  main.rs  pal_spec.rs  reverse.rs
src/gfx/process/: mod.rs
tests/: asm-link.rs  gfx.rs  rgbasm.rs
tests/asm-link/align16/: rgblink.flags
tests/asm-link/all-instructions/: test.asm
tests/asm-link/anon-label-bad/: rgbasm.err
tests/asm-link/assert/: rgbasm.err  rgblink.err
tests/asm-link/assert-nosect-bank/: rgbasm.err
tests/asm-link/bit-res-set-bad/: rgblink.err
tests/asm-link/block-comment-contents-error/: rgbasm.err
tests/asm-link/block-comment-termination-error/: rgbasm.err
tests/asm-link/blue-paint/: rgbasm.err
tests/asm-link/blue-paint-limits/: rgbasm.err
tests/asm-link/bracketed-macro-args/: rgbasm.err  rgbasm.out  test.asm
tests/asm-link/bracketed-symbols/: rgbasm.err
tests/asm-link/builtin-overwrite/: rgbasm.err  test.asm
tests/asm-link/builtin-reserved/: test.asm
tests/asm-link/cascading-errors/: rgblink.err
tests/asm-link/cascading-errors-fatal-assert/: rgblink.err
tests/asm-link/character-escape-at-end/: rgbasm.err
tests/asm-link/character-escapes/: rgbasm.err
tests/asm-link/character-literals/: rgbasm.err
tests/asm-link/charsize/: rgbasm.err  test.asm
tests/asm-link/charval/: test.asm
tests/asm-link/code-after-endm-endr-endc/: rgbasm.err  rgbasm.out  test.asm
tests/asm-link/compound-assignment/: rgbasm.err
tests/asm-link/continues-after-missing-include/: rgbasm.err  rgbasm.flags
tests/asm-link/continues-after-missing-preinclude/: rgbasm.flags
tests/asm-link/def/: rgbasm.err
tests/asm-link/div-mod/: test.asm
tests/asm-link/divzero-instr/: rgbasm.err
tests/asm-link/elif-after-else/: rgbasm.err
tests/asm-link/empty-local-referenced/: rgbasm.err
tests/asm-link/empty-local-used/: rgbasm.err
tests/asm-link/empty-raw-identifier/: rgbasm.out
tests/asm-link/empty-strings/: rgbasm.err
tests/asm-link/endsection-outside-section/: rgbasm.err
tests/asm-link/equs-newline/: rgbasm.err
tests/asm-link/error-recovery/: rgbasm.err
tests/asm-link/errors-after-missing-include/: rgbasm.flags
tests/asm-link/exits-after-missing-preinclude/: rgbasm.flags
tests/asm-link/expansion-diagnostics/: rgbasm.err
tests/asm-link/fail/: rgbasm.err
tests/asm-link/fixed-point-magnitude/: rgbasm.err
tests/asm-link/fixed-point-precision/: rgbasm.err  rgbasm.out
tests/asm-link/for/: rgbasm.err  test.asm
tests/asm-link/for-loop-variable/: rgbasm.err  rgbasm.out
tests/asm-link/fragment-align-mismatch/: rgbasm.err
tests/asm-link/if-macro/: rgbasm.err
tests/asm-link/incbin-empty-bad/: test.asm
tests/asm-link/incbin-end/: test.asm
tests/asm-link/incbin-start-bad/: rgbasm.err  test.asm
tests/asm-link/incharmap/: test.asm
tests/asm-link/include-recursion/: rgbasm.err  test.asm
tests/asm-link/include-slash/: flags.txt
tests/asm-link/interpolation-after-string/: rgbasm.err
tests/asm-link/interpolation-overflow/: rgbasm.err
tests/asm-link/invalid-alignment/: rgbasm.err
tests/asm-link/invalid-bank-known/: rgbasm.err
tests/asm-link/invalid-format/: rgbasm.err
tests/asm-link/invalid-macro-arg-symbol/: rgbasm.err
tests/asm-link/invalid-numbers/: rgbasm.err  test.asm
tests/asm-link/invalid-patches/: rgblink.err
tests/asm-link/invalid-utf-8-strings/: rgbasm.err
tests/asm-link/jr-@/: test.asm
tests/asm-link/label-before-endc/: rgbasm.err
tests/asm-link/label-macro-arg/: rgbasm.err
tests/asm-link/label-scope/: rgbasm.err
tests/asm-link/ldh-bad/: rgblink.err
tests/asm-link/line-continuation-at-eof/: rgbasm.err
tests/asm-link/line-continuation-whitespace/: rgbasm.err
tests/asm-link/linkerscript-escapes/: test.err
tests/asm-link/linkerscript-include/: script.err
tests/asm-link/linkerscript-noexist/: script.err
tests/asm-link/local-purge/: rgbasm.err
tests/asm-link/macro-@/: rgbasm.err
tests/asm-link/macro-arg-in-string/: rgbasm.out
tests/asm-link/macro-arguments/: rgbasm.err
tests/asm-link/macro-line-no/: rgbasm.err
tests/asm-link/macro-purge/: rgbasm.err
tests/asm-link/macro-recursion/: rgbasm.err
tests/asm-link/macro-syntax/: rgbasm.err
tests/asm-link/max-errors/: rgbasm.err
tests/asm-link/modzero-instr/: rgbasm.err
tests/asm-link/multiple-charmaps/: rgbasm.err  rgbasm.out
tests/asm-link/multivalue-charmap/: rgbasm.err
tests/asm-link/negative-ds/: rgbasm.err
tests/asm-link/negative-macro-args/: rgbasm.err  test.asm
tests/asm-link/nested-expansions/: rgbasm.err
tests/asm-link/nested-macrodef/: rgbasm.err
tests/asm-link/notexist/: rgbasm.err
tests/gfx/: bad_manual_pals.err  damaged2.err
(+174 files in other folders)
